# maggot

./: Cargo.toml
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: files.rs  fileserv.rs  main.rs
