[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
axum.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
anyhow = "1.0"
